# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .travis.yml  Dockerfile  README.md  Vagrantfile  docker-compose.yaml  docker_push  entrypoint.sh  pyproject.toml  requirements.txt  webhook.sh
documentation/: Component_Diagram.drawio  Container_Diagrams.drawio  Container_and_Component_Diagrams.drawio  Context_Diagram.drawio
todo_app/: app.py  flask_config.py  pytest.ini
todo_app/data/: .travis.yml  forms.py  item.py  item_status.py  model.py  mongodb.py  session_items.py  storage.py  storage_interface.py  trello.py  user.py
todo_app/templates/: index.html  index_ro.html
todo_app/tests/: test_integration.py  test_integration_vcr.py  test_mogodb.py  test_request.py  test_response.py  test_travis_env.py  test_view_model.py
todo_app/tests_e2e/: test_selenium.py  test_selenium_mongo.py
