[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
python-dotenv = "^0.14.0"
Flask-WTF = "^0.14.3"
requests = "^2.25.0"
gunicorn = "^20.0.4"
pymongo = {extras = ["srv"], version = "^3.12.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
selenium = "^3.141.0"
pytest-cov = "^2.11.1"
vcrpy = "^4.1.1"
pytest-recording = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
